<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_debug</name>
  <version>0.16.0</version>
  <description>The slam_debug package</description>
  <maintainer email="mfallon@navlive.co.uk">mfallon</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>diagnostic_msgs</depend>
  <depend>gtsam</depend>
  <depend>icp_odometry</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
<!--  <depend>static_estimation</depend> -->
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
